syntax = "proto3";

import "google/protobuf/wrappers.proto";

package taska.proto;

message CreateBoardReq {
  string title = 1;
  google.protobuf.StringValue description = 2;
}

message CreateBoardRes {
  string id = 1;
}

message GetBoardReq {
  string id = 1;
}

message GetBoardRes {
  string title = 1;
  google.protobuf.StringValue description = 2;
}

message ArchiveBoardReq {
  string id = 1;
}

message ArchiveBoardRes {
}

message UnArchiveBoardReq {
  string id = 1;
}

message UnArchiveBoardRes {
}

message UpdateBoardReq {
  string id = 1;
  repeated Update updates = 2;

  message Update {
    oneof cmd {
      UpdateBoardTitleOp update_board_title_cmd = 1;
      UpdateBoardDescriptionOp update_board_description_cmd = 2;
    }
  }
  message UpdateBoardTitleOp {
    string title = 1;
  }
  message UpdateBoardDescriptionOp {
    google.protobuf.StringValue description = 1;
  }

}
message UpdateBoardRes {
}