syntax = "proto3";

import "google/protobuf/wrappers.proto";

package taska.proto;

message CreateCardReq {
  string list_id = 1;
  string title = 2;
  google.protobuf.StringValue description = 3;
}

message CreateCardRes {
  string id = 1;
}

message GetCardReq {
  string id = 1;
}

message GetCardRes {
  string list_id = 1;
  string title = 2;
  google.protobuf.StringValue description = 3;
}

message ArchiveCardReq {
  string id = 1;
}

message ArchiveCardRes {
}

message UnArchiveCardReq {
  string id = 1;
}

message UnArchiveCardRes {
}

message UpdateCardReq {
  string id = 1;
  repeated Update updates = 2;

  message Update {
    oneof cmd {
      UpdateCardTitleOp update_card_title_cmd = 1;
      UpdateCardDescriptionOp update_card_description_cmd = 2;
    }
  }
  message UpdateCardTitleOp {
    string title = 1;
  }
  message UpdateCardDescriptionOp {
    google.protobuf.StringValue description = 1;
  }
}

message UpdateCardRes {
}