syntax = "proto3";

import "google/protobuf/wrappers.proto";

package taska.proto;

message PBoard {
  string id = 1;
  string title = 2;
  google.protobuf.StringValue description = 3;
}

message CreateBoardReq {
  string title = 1;
  google.protobuf.StringValue description = 2;
}

message CreateBoardRes {
  string id = 1;
}

message GetBoardReq {
  string id = 1;
}

message GetBoardRes {
  PBoard board = 1;
}

message GetBoardsReq {
}

message GetBoardsRes {
  repeated PBoard board = 1;
}

message ArchiveBoardReq {
  string id = 1;
}

message ArchiveBoardRes {
}

message UnArchiveBoardReq {
  string id = 1;
}

message UnArchiveBoardRes {
}

message UpdateBoardReq {
  string id = 1;
  repeated Update updates = 2;

  message Update {
    oneof cmd {
      PUpdateBoardTitleOp p_update_board_title_cmd = 1;
      PUpdateBoardDescriptionOp p_update_board_description_cmd = 2;
    }
  }
  message PUpdateBoardTitleOp {
    string title = 1;
  }
  message PUpdateBoardDescriptionOp {
    google.protobuf.StringValue description = 1;
  }

}
message UpdateBoardRes {
}