syntax = "proto3";

import "google/protobuf/wrappers.proto";

package taska.proto;

message CreateListReq {
  string board_id = 1;
  string title = 2;
  google.protobuf.StringValue description = 3;
}

message CreateListRes {
  string id = 1;
}

message GetListReq {
  string id = 1;
}

message GetListRes {
  string board_id = 1;
  string title = 2;
  google.protobuf.StringValue description = 3;
}

message ArchiveListReq {
  string id = 1;
}

message ArchiveListRes {
}

message UnArchiveListReq {
  string id = 1;
}

message UnArchiveListRes {
}

message UpdateListReq {
  string id = 1;
  repeated Update updates = 2;

  message Update {
    oneof cmd {
      PUpdateListTitleOp p_update_list_title_cmd = 1;
    }
  }
  message PUpdateListTitleOp {
    string title = 1;
  }
}

message UpdateListRes {
}